# Proficia-backend

./: .env  README.md  pyproject.toml
proficia_backend/: main.py
