[tool.poetry]
name = "proficia-backend"
version = "0.1.0"
description = ""
authors = ["SaiAryan1784 <saiaryan.goswami1784@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
groq = "^0.13.0"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
